[project]
name = "road-to-billions"
version = "3.0.0"
description = "Road to billions…"
readme = "README.md"
authors = [
    { name = "Anthony Gelibert", email = "anthony.gelibert@me.com" }
]
requires-python = ">=3.13"
dependencies = [
    "binance-connector~=3.11",
    "click~=8.1",
    "pandas~=2.2",
    "plotly~=5.24",
    "pydantic~=2.10",
    "rich~=13.9",
    "ta~=0.11",
]

[project.scripts]
road-to-billions = "road_to_billions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src/road_to_billions"]
output-format = "concise"

[tool.ruff.lint]
allowed-confusables = ["’"]
# By default, enable *all* lint rules.
select = ["ALL"]
# Enable *preview* to allow “experimental” rules.
preview = true
# Source: https://docs.astral.sh/ruff/rules
#    B024: flake8-bugbear        — Checks for abstract classes without abstract methods.
#    D107: pydocstyle            — Missing docstring in __init__.
#    D203: pydocstyle            — 1 blank line required before class docstring.
#    D212: pydocstyle            — Multi-line docstring summary should start at the first line.
#  FIX002: flake8-fixme          — Line contains TODO, consider resolving the issue.
#    G004: flake8-logging-format — Checks for uses of f-strings to format logging messages.
#    S101: flake8-bandit         — Use of assert detected.
#    T201: flake8-print          — print found.
#  TID252: flake8-tidy-imports   — Checks for relative imports.
ignore = ["B024", "D107", "D203", "D212", "FIX002", "G004", "S101", "T201", "TID252"]
# Add some ignores that shouldn’t be in the “regular” list but are useful.
#    CPY: flake8-copyright    — Ignore **EVERYTHING**.
#    DOC: pydoclint           — Ignore **EVERYTHING**.
extend-ignore = ["CPY", "DOC"]

[tool.ruff.lint.per-file-ignores]
# Ignore F822 (undefined-export) in all “__init__.py” files (due to “preview”).
"__init__.py" = ["F822"]

[tool.ruff.lint.isort]
known-local-folder = ["src/road_to_billions"]
no-lines-before = ["local-folder"]
order-by-type = false
relative-imports-order = "closest-to-furthest"
